# ft_pack_vetudenoir

./: LICENSE  README.md  pyproject.toml
ft_pack_vetudenoir/: count_in_list.py
