[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_pack_vetudenoir"
version = "0.0.2"
authors = [
  { name = "vetudenoir", email = "kscordel@student.42.fr"},
]
description = "A sample test package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
homepage = "https://github.com/vetuedenoir/ft_pack_vetudenoir"


